# FreeMiD

./: .gitignore  .yamllint  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PRIVACY.md  README.md  SECURITY.md  TERMS.md
.claude/commands/: pr-prep.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  windows-artifacts.yml
docs/: ASSET-INVENTORY.md  AUDIT-2026-06-23.md  E2E-UPDATER-TESTING.md  NATIVE-HOST-UPDATER-ARCHITECTURE.md  RELEASE-0.4.0-CHECKLIST.md  RELEASE-0.4.0-PLAN.md  RELEASE-4.0.0-CHECKLIST.md  ROADMAP.md  UPDATER.md  WINDOWS-INSTALLER-PLAN.md
extension/: .env.example  biome.json  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.activities.config.ts  vite.config.mts  vite.config.ts
extension/dev-tools/: oauth2-test.html  oauth2-test.js
extension/public/: manifest.json
extension/public/popup/: index.html
extension/public/settings/: index.html
extension/scripts/: build-activities.mjs
extension/src/: vite-env.d.ts
extension/src/activities/: registry.test.ts  registry.ts
extension/src/activities/applemusic/: index.ts
extension/src/activities/netflix/: index.ts
extension/src/activities/tidal/: index.test.ts  index.ts
extension/src/activities/twitch/: index.ts
extension/src/activities/youtube/: index.test.ts  index.ts
extension/src/activities/youtubemusic/: index.test.ts  index.ts
extension/src/background/: helpers.test.ts  helpers.ts  index.ts
extension/src/constants/: github.test.ts  github.ts  presenceAssets.test.ts  presenceAssets.ts  serviceIcons.ts  storageKeys.test.ts  storageKeys.ts
extension/src/discord-bridge/: index.ts
extension/src/popup/: helpers.test.ts  helpers.ts  index.html  index.ts
extension/src/presence/: Presence.test.ts  Presence.ts
extension/src/settings/: index.ts
extension/src/utils/: PlaybackAnchor.ts  parseClock.test.ts  parseClock.ts  parseIsoDuration.test.ts  parseIsoDuration.ts  urlLike.test.ts  urlLike.ts
extension/test/: setup.ts
install/: install.ps1  install.sh  uninstall.ps1  uninstall.sh
installer/: Cargo.toml  build.rs  freemid-setup.manifest  freemid-setup.rc
installer/src/: main.rs
native-host/: Cargo.toml  build.rs
native-host/src/: applescript_media.rs  desktop_track.rs  discord_ipc.rs  main.rs  smtc.rs  update.rs  updater_main.rs  windows_apply.rs  ws_server.rs
scripts/: local-update-e2e.sh  sync-version.sh
