[package]
name = "freemid-installer"
version.workspace = true
edition = "2021"
authors = ["FreeMiD Contributors"]
license = "GPL-3.0-or-later"
description = "FreeMiD Windows installer"

[[bin]]
name = "freemid-setup"
path = "src/main.rs"

[target.'cfg(windows)'.dependencies]
native-windows-gui = "1"
sha2 = "0.10"
ureq = { version = "3", features = ["platform-verifier"] }

[build-dependencies]
embed-resource = "2"
