[package]
name = "freemid-installer"
version.workspace = true
edition = "2021"
authors = ["FreeMiD Contributors"]
license = "GPL-3.0-or-later"
description = "FreeMiD Windows installer"

[[bin]]
name = "freemid-setup"
path = "src/main.rs"

[target.'cfg(windows)'.dependencies]
sha2 = "0.11"
ureq = { version = "3", features = ["platform-verifier"] }
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[build-dependencies]
embed-resource = "3"
