[package]
name = "freemid"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Free, open-source Discord Rich Presence — Chrome native messaging host"

[[bin]]
name = "freemid"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["tls"] }
sha2 = "0.10"
hex = "0.4"
