[package]
name = "freemid"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Free, open-source Discord Rich Presence — Chrome native messaging host"

[[bin]]
name = "freemid"
path = "src/main.rs"

[[bin]]
name = "freemid-apply"
path = "src/updater_main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "3", features = ["platform-verifier"] }
sha2 = "0.11"
hex = "0.4"
thiserror = "2"
minisign-verify = "0.2.5"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_Security"] }
windows = { version = "0.62", features = [
    "Foundation",
    "Foundation_Collections",
    "Media_Control",
    "Win32_System_Com",
    "Win32_System_SystemInformation",
] }
windows-future = "0.3"
